Elisabeth's comments and some of Gus's

--- a/CMD_cuts_figure.ipynb
+++ b/CMD_cuts_figure.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,9 @@
     "ax2.plot(xs, np.ones_like(xs)*subcut, \"k--\")\n",
     "\n",
     "plt.subplots_adjust(hspace=.25)\n",
-    "# plt.tight_layout()"
+    "# plt.tight_layout()\n",
+    "plt.savefig(\"CMD_cuts_double.pdf\")\n",
+    "plt.savefig(\"CMD_cuts_double\")"
    ]
   },
   {
