--- a/paper/acknowledgements.tex
+++ b/paper/acknowledgements.tex
@@ -1,4 +1,4 @@
-This work was partly developed at the 2019 KITP conference 'Better stars,
+This work was partly developed at the 2019 KITP conference `Better stars,
 better planets'.
 Parts of this project are based on ideas explored at the Gaia sprints at the
 Flatiron Institute in New York City, 2016 and MPIA, Heidelberg, 2017.
