--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -774,6 +774,26 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{davenport2017,
+       author = {{Davenport}, James R.~A.},
+        title = "{Rotating Stars from Kepler Observed with Gaia DR1}",
+      journal = {\apj},
+     keywords = {stars: general, stars: kinematics and dynamics, stars: rotation, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2017",
+        month = "Jan",
+       volume = {835},
+       number = {1},
+          eid = {16},
+        pages = {16},
+          doi = {10.3847/1538-4357/835/1/16},
+archivePrefix = {arXiv},
+       eprint = {1610.08563},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017ApJ...835...16D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{mcquillan2013,
        author = {{McQuillan}, A. and {Aigrain}, S. and {Mazeh}, T.},
         title = "{Measuring the rotation period distribution of field M dwarfs with Kepler}",
