--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -31,8 +31,8 @@ temperature and age.
 We found that the \citet{angus2019} relation, which is based on the
 period-color relation of the 650 Myr Praesepe cluster, does not correctly
 describe the period-age-\teff\ relation for old stars.
-At young ages, rotation period is anti-correlated with \teff: cooler stars
-spin more slowly than hotter stars of the same age.
+Instead we found that, at young ages, rotation period is anti-correlated with
+\teff: cooler stars spin more slowly than hotter stars of the same age.
 However, at intermediate ages the relation flattens out and K dwarfs rotate at
 the same rate, regardless of mass.
 At old ages, it seems that cooler K dwarfs spin more rapidly than hotter K
