--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -115,12 +115,14 @@ therefore be used to {\it rank} groups of stars by age.
 This paper is laid out as follows: in section \ref{sec:method} we describe our
 sample selection process and the methods used to calculate stellar
 velocities.
-We also establish that \vb\ velocity dispersion, \sigmavb, can be used as an
-age proxy by demonstrating that neither mass-dependent heating nor the
-selection function is observed to strongly affect our sample.
 In section \ref{sec:results} we use kinematics to investigate the
 relationship between rotation period, age and color/\teff\ in the field and
 interpret our results.
+We also establish that \vb\ velocity dispersion, \sigmavb, can be used as an
+age proxy by demonstrating that neither mass-dependent heating nor the
+selection function is observed to strongly affect our sample.
+Finally, we examine the rotation period gap and the kinematics of synchronized
+binaries in section \ref{sec:results}.
 % We show that the period-color relation of Praesepe is not applicable to
 % old stars in section \ref{sec:age_cut}, and reveal the true shape of the
 % period-color relations in section \ref{sec:the_reveal}.
