--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -54,7 +54,7 @@
 \newcommand{\degrees}{$^\circ$}
 \newcommand{\vz}{$v_{\bf z}$}
 \newcommand{\vb}{$v_{\bf b}$}
-\newcommand{\kms}{$kms^{-1}$}
+\newcommand{\kms}{kms$^{-1}$}
 \newcommand{\sigmavb}{$\sigma_{v{\bf b}}$}
 \newcommand{\sigmavz}{$\sigma_{v{\bf z}}$}
 
